Fixed the Building and apartment model, and also fixed the cards to be shown in the Profile Page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -21,10 +21,10 @@
     padding-left: 25px;
     padding-right: 25px;
   }
-
+/* 
   .row .col.m12{
     width: 30%
-  }
+  } */
 
   .fslider{
     padding-bottom: 40px;
